--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <a href="#">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
 
       <nav>
         <ul>
@@ -112,7 +112,7 @@
     </main>
 
     <footer>
-      <a href="#">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
