--- a/index.html
+++ b/index.html
@@ -30,35 +30,36 @@
       </section>
 
       <section>
-        <h2>Strategy</h2>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-      </section>
-
-      <section>
-        <h2>Punctuality</h2>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-      </section>
-
-      <section>
-        <h2>Diligence</h2>
-        <p>
-          Research and confirm brands with the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-      </section>
-
-      <section>
-        <h2>Technologies</h2>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
+        <ul>
+          <li>
+            <h2>Strategy</h2>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h2>Punctuality</h2>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h2>Diligence</h2>
+            <p>
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h2>Technologies</h2>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
 
       <section>
@@ -77,7 +78,7 @@
 
           <li>
             <img
-              src="images/tom ford.png"
+              src="images/tomford.png"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -99,7 +100,7 @@
 
           <li>
             <img
-              src="images/Daniel.png"
+              src="images/daniel.png"
               alt="Daniel Wilson"
               width="264"
               height="260"
