--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
           <li>
             <img
-              src="images/daniel.png"
+              src="images/aniel.png"
               alt="Daniel Wilson"
               width="264"
               height="260"
